--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.1.2
   google_fonts: ^6.2.1
+  syncfusion_flutter_charts: ^27.1.57
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
